# src-book

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  logo.txt  src-book.toml
src/: character_width.rs  cli.rs  config_wizard.rs  detection.rs  file_ordering.rs  formatting.rs  highlight.rs  line_analysis.rs  main.rs  update.rs
src/sinks/: mod.rs
src/sinks/epub/: config.rs  mod.rs  styles.rs
src/sinks/epub/rendering/: colophon.rs  commits.rs  cover.rs  mod.rs  source_file.rs  tags.rs  toc.rs
src/sinks/pdf/: booklet.rs  config.rs  fonts.rs  imposition.rs  mod.rs
src/sinks/pdf/rendering/: colophon.rs  commits.rs  header.rs  header_footer.rs  hex_dump.rs  images.rs  mod.rs  source_file.rs  table_of_contents.rs  tags.rs  title_page.rs
src/sinks/xelatex/: mod.rs
src/source/: author.rs  commit.rs  mod.rs  source_file.rs  tag.rs
src/source/providers/: git_repository.rs  mod.rs
src/sources/: mod.rs  repository.rs
