[package]
name = "src-book"
version = "0.0.0-dev.1"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A tool for converting a source repository into a book you can print"
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
git2 = "0.14"
ignore = "0.4"
derive_builder = "0.11"
syntect = "5.0"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
console = "0.15"
anyhow = "1.0"
log = "0.4"
clap = { version = "3.2", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
globset = "0.4"
pdf-gen = { path = "../pdf-gen" }
owned_ttf_parser = "0.15"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
byte-unit = "4"
chrono = "0.4"
bincode = "1"

[build-dependencies]
syntect = "5.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
