[package]
name = "src-book"
version = "0.0.0-dev.1"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A tool for converting a source repository into a book you can print"
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
git2 = "0.20"
ignore = "0.4"
derive_builder = "0.20"
syntect = "5.3"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"
indicatif = "0.17"
anyhow = "1.0"
log = "0.4"
clap = { version = "4", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
globset = "0.4"
pdf-gen = { path = "../pdf-gen" }
owned_ttf_parser = "0.25"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byte-unit = "5"
chrono = "0.4"
bincode = { version = "2", features = ["serde"] }
epub-builder = "0.7"
html-escape = "0.2"
eyre = "0.6"

[build-dependencies]
syntect = "5.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
